packages/chart/src/components/Legend/LegendGroup/LegendGroup.styles.css
.legend-container {
  .legend-group {
    font-size: 1rem;

    line-height: 18px;
    margin-bottom: 0.5rem;

    .group-item .visx-legend-label {
      font-size: 0.889rem;
      font-weight: 400;
      margin-bottom: 0.5rem;
    }
    .group-label {
      font-family: Nunito, sans-serif;
      font-size: 1rem;
      font-weight: 500;
    }
  }

  .legend-group.top,
  .legend-group.bottom {
    grid-gap: 10px;

    &.group-item {
      align-items: flex-start;
      display: flex;
      flex-direction: column;
    }

    & .inactive {
      opacity: 0.5;
      transition: 0.2s all;
    }
    & .highlighted {
      border-radius: 1px;
      outline: 1px solid #005ea2;
      outline-offset: 5px;
    }
  }
}

